update html delete commits

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -13,20 +13,19 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: "Helvetica", "Arial", sans-serif; /* Estilo claro y legible */
+            font-family: "Helvetica", "Arial", sans-serif; 
         }
 
         .container {
             padding: 0;
-            width: 100%; /* Ancho completo de la página */
+            width: 100%; 
         }
 
         img {
-            width: 100%; /* Ocupar todo el ancho del contenedor */
-            height: auto; /* Mantener la proporción de la imagen */
+            width: 100%; 
+            height: auto; 
         }
 
-        /* Estilo del menú */
         .navbar {
             position: absolute;
             top: 10px;
@@ -35,14 +34,14 @@
         }
 
         .navbar a {
-            color: white; /* Cambiar el color de la fuente a blanco para contraste */
-            text-decoration: none; /* Quitar el subrayado */
+            color: white; 
+            text-decoration: none; 
             padding: 10px 15px;
             transition: color 0.3s;
         }
 
         .navbar a:hover {
-            color: #ffcc00; /* Color de hover en las opciones del menú */
+            color: #ffcc00; 
         }
 
         .navbar a:focus {
