--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,7 +32,6 @@
             height: auto;
         }
 
-        /* Estilo del menú */
         .navbar {
             position: absolute;
             top: 10px;
@@ -57,7 +56,7 @@
         }
 
         .content {
-            margin-top: 2%; /* Aumenta este valor para elevar más el rectángulo */
+            margin-top: 2%; 
             flex-grow: 1;
             display: flex;
             flex-direction: column;
@@ -65,26 +64,26 @@
             align-items: center;
         }
 
-        /* Nueva clase para la imagen del logo */
+        
         .logo-container {
             position: absolute;
-            top: 0; /* Ajusta la posición vertical del logo para que esté lo más arriba posible */
-            left: 50%; /* Centrado horizontalmente */
-            transform: translateX(-50%); /* Centra la imagen */
-            z-index: -1; /* Mantiene el logo detrás del contenido */
+            top: 0;  
+            left: 50%; 
+            transform: translateX(-50%); 
+            z-index: -1; 
         }
 
         footer {
-            position: fixed; /* Cambiado a fixed para mantenerlo en la esquina inferior izquierda */
+            position: fixed;  
             bottom: 0;
-            left: 0; /* Alineado a la izquierda */
-            color: gray; /* Color del texto */
-            margin: 0; /* Sin márgenes */
-            padding: 0; /* Sin padding */
-            font-size: 14px; /* Tamaño de la fuente */
-            width: 100%; /* Para que ocupe todo el ancho */
-            text-align: left; /* Alineación del texto a la izquierda */
-            padding-left: 10px; /* Margen a la izquierda */
+            left: 0;  
+            color: gray;  
+            margin: 0; 
+            padding: 0; 
+            font-size: 14px; 
+            width: 100%; 
+            text-align: left; 
+            padding-left: 10px; 
         }
     </style>
 </head>
