--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,12 +17,12 @@
       background-repeat: no-repeat;
     }
     .login-container {
-      background-color: rgba(255, 255, 255, 0.8); /* Color de fondo con opacidad */
+      background-color: rgba(255, 255, 255, 0.8); 
       padding: 20px;
       height: 45%;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      text-align: center; /* Centra el contenido del contenedor */
+      text-align: center; 
     }
     input[type="text"],
     input[type="password"] {
@@ -52,28 +52,28 @@
 	    text-align: center;
 	    border-radius: 4px; 
 	    padding: 10px; 
-	    display: none; /* Ocultar por defecto */
+	    display: none; 
 	}
 	
 	form {
-	    position: relative; /* Establecer posición relativa para el formulario */
-	    text-align: left; /* Alinea el texto a la izquierda */
+	    position: relative; 
+	    text-align: left; 
 	}
 
 	.error-message {
 	    position: absolute;
-	    top: 100%; /* Colocar el mensaje de error debajo del formulario */
+	    top: 100%; 
 	    left: 50%;
-	    transform: translateX(-50%); /* Centrar horizontalmente */
+	    transform: translateX(-50%); 
 	}
 
-    /* Estilos para el formulario con credenciales inválidas */
+   
     .invalid-credentials form {
-        padding: 30px; /* Aumenta el tamaño del formulario */
+        padding: 30px; 
     }
     
     .invalid-credentials label {
-        text-align: left; /* Alinea los labels a la izquierda */
+        text-align: left; 
     }
 
   </style>
@@ -97,10 +97,8 @@
   </div>
 </body>
 <script>
-  // Obtener el elemento de mensaje de error
   var errorMessage = document.querySelector('.error-message');
 
-  // Mostrar el mensaje de error si tiene texto
   if (errorMessage.textContent.trim() !== '') {
     errorMessage.style.display = 'block';
   }
