--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,13 +17,13 @@
       background-repeat: no-repeat;
     }
     .login-container {
-      background-color: rgba(255, 255, 255, 0.8); /* Color de fondo con opacidad */
+      background-color: rgba(255, 255, 255, 0.8); 
       padding: 20px;
       height: 60%;
       width: 40%;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      text-align: center; /* Centra el contenido del contenedor */
+      text-align: center; 
     }
     input[type="text"],
     input[type="password"] {
@@ -45,20 +45,20 @@
     }
         
 	form {
-	    position: relative; /* Establecer posición relativa para el formulario */
-	    text-align: left; /* Alinea el texto a la izquierda */
+	    position: relative; 
+	    text-align: left; 
 	}
 
 	.error-message {
 		background-color: red;
 	    color: antiquewhite;
 	    text-align: center;
-	    display: none; /* Ocultar por defecto */
+	    display: none; 
 	    position: absolute;
-	    top: 8%; /* Colocar el mensaje de error debajo del formulario */
+	    top: 8%; 
 	    left: 50%;
 	    border: solid 10px red;
-	    transform: translateX(-40%); /* Centrar horizontalmente */
+	    transform: translateX(-40%); 
 	}
 
   </style>
@@ -97,10 +97,8 @@
   </div>
 </body>
 <script>
-  // Obtener el elemento de mensaje de error
   var errorMessage = document.querySelector('.error-message');
 
-  // Mostrar el mensaje de error si tiene texto
   if (errorMessage.textContent.trim() !== '') {
     errorMessage.style.display = 'block';
   }
