--- a/src/main/resources/templates/showdrinks.html
+++ b/src/main/resources/templates/showdrinks.html
@@ -57,6 +57,7 @@
 			top: 10px;
 			right: 10px;
 			font-size: 16px;
+			z-index: 100;
 		}
 
 		.navbar a {
@@ -173,12 +174,13 @@
 
 		.filter-container {
 			position: relative;
-    		z-index: 10; 
+			z-index: 10;
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			padding-top: 120px; 
-   			margin-bottom: -15%; 
+			margin-top: 50px; 
+			padding-top: 100px;
+			margin-bottom: -15%;
 		}
 	</style>
 
