--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -72,6 +72,9 @@
                         <a class="nav-link" href="/admin/showEvents" style="white-space: nowrap;">Events</a>
                     </li>
                     <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+                        <a class="nav-link" href="/admin/showOffers" style="white-space: nowrap;">Offers</a>
+                    </li>
+                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
                         <a class="nav-link" href="/admin/registermultimedia" style="white-space: nowrap;">Job Applications</a>
                     </li>
                     
