--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -75,7 +75,7 @@
                         <a class="nav-link" href="/admin/showOffers" style="white-space: nowrap;">Offers</a>
                     </li>
                     <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
-                        <a class="nav-link" href="/admin/registermultimedia" style="white-space: nowrap;">Job Applications</a>
+                        <a class="nav-link" href="/admin/showCVs" style="white-space: nowrap;">Job Applications</a>
                     </li>
                     
                     <!-- Elementos siempre visibles -->
