--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -118,7 +118,7 @@
 					<section>
 						<p>At <strong>DAMM Bar</strong>, we’re not just another spot in town – we’re the place where
 							passion for great drinks, exceptional food, and a vibrant atmosphere come together. Located
-							in the heart of [city], DAMM Bar offers a blend of modern vibes with the warmth of a classic
+							in the heart of Cádiz, DAMM Bar offers a blend of modern vibes with the warmth of a classic
 							hangout.</p>
 
 						<p>Whether you're here for our handcrafted cocktails, delicious tapas, or just to unwind with
@@ -129,7 +129,7 @@
 							about creating the perfect place for you to enjoy life’s little moments. Come for the good
 							times, stay for the unforgettable experiences.</p>
 
-						<p>Join us at DAMM Bar and discover your new favorite spot in [city].</p>
+						<p>Join us at DAMM Bar and discover your new favorite spot in Cádiz.</p>
 					</section>
 				</div>
 			</div>
