--- a/src/main/resources/templates/showoffers.html
+++ b/src/main/resources/templates/showoffers.html
@@ -85,17 +85,15 @@
         }
 
        
-
-        /* Contenedor para las ofertas activas */
         .active-offers-container {
            	background-color: rgba(255, 255, 255, 0.7);
 			color: black;
             border-radius: 15px;
             border: 2px solid transparent;
             padding: 20px;
-            width: 500px; /* Aumentar el ancho */
+            width: 500px; 
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin: 50px auto; /* Añadir margen superior y centrar */
+            margin: 50px auto; 
         }
 
         
@@ -225,10 +223,8 @@
         <!-- Cuerpo -->
         <div class="content" style="margin-top: 20%;">
         
-            <!-- Contenedor de todas las ofertas -->
             <div class="active-offers-container" style="margin: 5%;">
                 <div class="offers-title">OFFERS</div>
-                    <!-- Ofertas -->
                     <div th:each="offer : ${offers}" class="offer-card" style="margin-bottom: 3%;">
                         <h2 th:text="${offer.title}">Offer Title</h2>
                         <p th:text="'Event last day: ' + ${offer.offerenddate}">Offer End Date</p>
